maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:9: warning: Detected apparent refinement of Unit; are you missing an '=' sign?
def keepHandOnSideWall():Unit{
                             ^Escaper:10: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  gauche()
  ^Escaper:11: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(!estFaceMur()){
  ^